# HarnessCI

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  action.yml  demo_harnessci.py  entrypoint.sh  harnessci.yaml  pyproject.toml
.harnessci/: .hash  spec.json  spec.md  vectors.db
docs/: TFM_propuesta_formal.md  agenticpr_layer1_findings.md  agenticpr_layer2_design.md  agenticpr_layer2_findings.md  ai_harness_setup.md  architecture.md  h2h_comparison_report.md  product_spec.md  research_protocol.md  scoring_model.md  telemetry_schema.md  tfm_report.md  tfm_thesis.md
openspec/: config.yaml
scripts/: audit_layer3_full.py  audit_layer3_full_pipeline.py  audit_layer3_multi_metric.py  audit_layer3_stratified.py  audit_layer3_with_groq.py  audit_zero_bias_diffs.py  bootstrap_layer3_confidence.py  build_agent_reputation.py  build_agent_reputation_v2.py  build_agenticpr_layer1.py  build_agenticpr_layer1_specs.py  build_agenticpr_layer2_manifest.py  build_cases_from_diffs.py  build_layer2_extended.py  build_layer3_100k_sample.py  build_layer3_sample.py  build_zero_bias_sample.py  compare_agenticpr_layer1_baselines.py  compare_agenticpr_layer2_baselines.py  evaluate_agenticpr_layer1.py  evaluate_agenticpr_layer2.py  evaluate_h3_telemetry.py  evaluate_layer1_with_traces.py  evaluate_layer3_metadata.py  evaluate_layer3_with_diffs.py  evaluate_zero_bias_metadata.py  external_validation_h2h.py  external_validation_quick.py  fetch_layer3_diffs.py  fetch_layer3_diffs_stratified.py  fetch_zero_bias_diffs.py  generate_layer1_traces.py  generate_layer2_patches.py  (+2 more)
(+560 files in other folders)
