[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessci"
version = "0.1.0"
description = "CI for AI-generated Pull Requests."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.12,<3", "pyyaml>=6.0.3,<7"]

[project.scripts]
harnessci = "harnessci.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.4,<9", "ruff>=0.14,<1"]
dataset = [
  "fsspec>=2025.10.0",
  "huggingface-hub>=1.1.0",
  "pandas>=2.3.0",
  "pyarrow>=22.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
